refactor(project): format