@@ -11,132 +11,132 @@ import java.util.stream.Collectors;
 
 public class RavenCategoryManager {
 
-    private final DocumentStore store;
+		private final DocumentStore store;
 
-    public RavenCategoryManager() {
-        this.store = RavenConfig.getDocumentStore();
-    }
+		public RavenCategoryManager() {
+				this.store = RavenConfig.getDocumentStore();
+		}
 
-    // 1. Count how many categories exist at each depth level (based on "path")
-    public void countCategoriesByDepthLevel() {
-        try (IDocumentSession session = store.openSession()) {
-            Map<Integer, Long> result = session.query(Category.class)
-                    .toList()
-                    .stream()
-                    .collect(Collectors.groupingBy(
-                            cat -> cat.getPath().split("/").length,
-                            TreeMap::new,
-                            Collectors.counting()
-                    ));
+		public static void main(String[] args) {
+				// Reset RavenDB database
+				RavenConfig.resetDatabase();
 
-            result.forEach((depth, count) -> System.out.printf("Depth %d: %d categories%n", depth, count));
-        }
-    }
+				// Init manager and generate data
+				RavenCategoryManager manager = new RavenCategoryManager();
+				List<Category> categories = ModelDataGenerator.generateCategories();
 
-    // 2. List all parent categories (top-level from path)
-    public void listTopLevelCategories() {
-        try (IDocumentSession session = store.openSession()) {
-            Set<String> topLevels = session.query(Category.class)
-                    .toList()
-                    .stream()
-                    .map(cat -> cat.getPath().split("/")[0])
-                    .collect(Collectors.toCollection(TreeSet::new));
+				try (IDocumentSession session = manager.store.openSession()) {
+						for (Category c : categories) {
+								session.store(c);
+						}
+						session.saveChanges();
+				}
 
-            topLevels.forEach(System.out::println);
-        }
-    }
+				System.out.println("\n1. Categories by depth level:");
+				manager.countCategoriesByDepthLevel();
 
-    // 3. Count the number of subcategories under each top-level category
-    public void countSubcategoriesPerTopLevel() {
-        try (IDocumentSession session = store.openSession()) {
-            Map<String, Long> result = session.query(Category.class)
-                    .toList()
-                    .stream()
-                    .collect(Collectors.groupingBy(
-                            cat -> cat.getPath().split("/")[0],
-                            Collectors.counting()
-                    ));
+				System.out.println("\n2. Top-level categories:");
+				manager.listTopLevelCategories();
 
-            result.entrySet().stream()
-                    .sorted(Map.Entry.<String, Long>comparingByValue().reversed())
-                    .forEach(e -> System.out.printf("%s: %d subcategories%n", e.getKey(), e.getValue()));
-        }
-    }
+				System.out.println("\n3. Subcategories count per top-level:");
+				manager.countSubcategoriesPerTopLevel();
 
-    // 4. Find all leaf categories (not parents of any other)
-    public void findLeafCategories() {
-        try (IDocumentSession session = store.openSession()) {
-            List<Category> all = session.query(Category.class).toList();
-            Set<String> allPaths = all.stream().map(Category::getPath).collect(Collectors.toSet());
+				System.out.println("\n4. Leaf categories:");
+				manager.findLeafCategories();
 
-            List<Category> leaves = all.stream()
-                    .filter(cat -> allPaths.stream()
-                            .noneMatch(other -> !other.equals(cat.getPath()) && other.startsWith(cat.getPath() + "/"))
-                    )
-                    .collect(Collectors.toList());
+				System.out.println("\n5. Categories with their parents:");
+				manager.listCategoriesWithParents();
 
-            leaves.forEach(cat -> System.out.printf("Leaf: %s (%s)%n", cat.getName(), cat.getPath()));
-        }
-    }
+				System.out.println("\n6. Search categories by name containing 'fic':");
+				manager.searchCategoriesByName("fic");
+		}
 
-    // 5. List categories with their direct parent name
-    public void listCategoriesWithParents() {
-        try (IDocumentSession session = store.openSession()) {
-            List<Category> categories = session.query(Category.class).toList();
+		// 1. Count how many categories exist at each depth level (based on "path")
+		public void countCategoriesByDepthLevel() {
+				try (IDocumentSession session = store.openSession()) {
+						Map<Integer, Long> result = session.query(Category.class)
+										.toList()
+										.stream()
+										.collect(Collectors.groupingBy(
+														cat -> cat.getPath().split("/").length,
+														TreeMap::new,
+														Collectors.counting()
+										));
 
-            for (Category cat : categories) {
-                String[] parts = cat.getPath().split("/");
-                String parent = parts.length >= 2 ? parts[parts.length - 2] : null;
-                System.out.printf("Category: %s, Parent: %s%n", cat.getName(), parent);
-            }
-        }
-    }
+						result.forEach((depth, count) -> System.out.printf("Depth %d: %d categories%n", depth, count));
+				}
+		}
 
-    // 6. Search categories by partial name (case-insensitive)
-    public void searchCategoriesByName(String keyword) {
-        try (IDocumentSession session = store.openSession()) {
-            List<Category> results = session.query(Category.class)
-                    .whereEquals("name", keyword) // fallback if not indexed
-                    .toList()
-                    .stream()
-                    .filter(cat -> cat.getName().toLowerCase().contains(keyword.toLowerCase()))
-                    .collect(Collectors.toList());
+		// 2. List all parent categories (top-level from path)
+		public void listTopLevelCategories() {
+				try (IDocumentSession session = store.openSession()) {
+						Set<String> topLevels = session.query(Category.class)
+										.toList()
+										.stream()
+										.map(cat -> cat.getPath().split("/")[0])
+										.collect(Collectors.toCollection(TreeSet::new));
 
-            results.forEach(cat -> System.out.printf("Match: %s (%s)%n", cat.getName(), cat.getPath()));
-        }
-    }
+						topLevels.forEach(System.out::println);
+				}
+		}
 
-    public static void main(String[] args) {
-        // Reset RavenDB database
-        RavenConfig.resetDatabase();
+		// 3. Count the number of subcategories under each top-level category
+		public void countSubcategoriesPerTopLevel() {
+				try (IDocumentSession session = store.openSession()) {
+						Map<String, Long> result = session.query(Category.class)
+										.toList()
+										.stream()
+										.collect(Collectors.groupingBy(
+														cat -> cat.getPath().split("/")[0],
+														Collectors.counting()
+										));
 
-        // Init manager and generate data
-        RavenCategoryManager manager = new RavenCategoryManager();
-        List<Category> categories = ModelDataGenerator.generateCategories();
+						result.entrySet().stream()
+										.sorted(Map.Entry.<String, Long>comparingByValue().reversed())
+										.forEach(e -> System.out.printf("%s: %d subcategories%n", e.getKey(), e.getValue()));
+				}
+		}
 
-        try (IDocumentSession session = manager.store.openSession()) {
-            for (Category c : categories) {
-                session.store(c);
-            }
-            session.saveChanges();
-        }
+		// 4. Find all leaf categories (not parents of any other)
+		public void findLeafCategories() {
+				try (IDocumentSession session = store.openSession()) {
+						List<Category> all = session.query(Category.class).toList();
+						Set<String> allPaths = all.stream().map(Category::getPath).collect(Collectors.toSet());
 
-        System.out.println("\n1. Categories by depth level:");
-        manager.countCategoriesByDepthLevel();
+						List<Category> leaves = all.stream()
+										.filter(cat -> allPaths.stream()
+														.noneMatch(other -> !other.equals(cat.getPath()) && other.startsWith(cat.getPath() + "/"))
+										)
+										.collect(Collectors.toList());
 
-        System.out.println("\n2. Top-level categories:");
-        manager.listTopLevelCategories();
+						leaves.forEach(cat -> System.out.printf("Leaf: %s (%s)%n", cat.getName(), cat.getPath()));
+				}
+		}
 
-        System.out.println("\n3. Subcategories count per top-level:");
-        manager.countSubcategoriesPerTopLevel();
+		// 5. List categories with their direct parent name
+		public void listCategoriesWithParents() {
+				try (IDocumentSession session = store.openSession()) {
+						List<Category> categories = session.query(Category.class).toList();
 
-        System.out.println("\n4. Leaf categories:");
-        manager.findLeafCategories();
+						for (Category cat : categories) {
+								String[] parts = cat.getPath().split("/");
+								String parent = parts.length >= 2 ? parts[parts.length - 2] : null;
+								System.out.printf("Category: %s, Parent: %s%n", cat.getName(), parent);
+						}
+				}
+		}
 
-        System.out.println("\n5. Categories with their parents:");
-        manager.listCategoriesWithParents();
+		// 6. Search categories by partial name (case-insensitive)
+		public void searchCategoriesByName(String keyword) {
+				try (IDocumentSession session = store.openSession()) {
+						List<Category> results = session.query(Category.class)
+										.whereEquals("name", keyword) // fallback if not indexed
+										.toList()
+										.stream()
+										.filter(cat -> cat.getName().toLowerCase().contains(keyword.toLowerCase()))
+										.collect(Collectors.toList());
 
-        System.out.println("\n6. Search categories by name containing 'fic':");
-        manager.searchCategoriesByName("fic");
-    }
+						results.forEach(cat -> System.out.printf("Match: %s (%s)%n", cat.getName(), cat.getPath()));
+				}
+		}
 }
